fix dist build and set testing file

--- a/test/index.html
+++ b/test/index.html
@@ -10,8 +10,8 @@
 
 	<input type="text"
 		style="direction: rtl; padding: 5px; font-size: 18px; width: 80vw;"
-		onkeydown="l2t()">
+		onkeydown="thaanaKeyboard.l2t(event)">
 
-<script src="../dist/thaana.min.js"></script>
+<script src="../dist/thaana-keyboard.min.js"></script>
 </body>
 </html>
