clean up testing file

--- a/test/index.html
+++ b/test/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
-<html lang="{{ app()->getLocale() }}">
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
 <body>
-
 	<input type="text"
 		style="direction: rtl; padding: 5px; font-size: 18px; width: 80vw;"
 		onkeydown="thaanaKeyboard.l2t(event)">
-
-<script src="../dist/thaana-keyboard.min.js"></script>
+	<script src="../dist/thaana-keyboard.min.js"></script>
 </body>
 </html>
