update test file

--- a/test/index.html
+++ b/test/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<input type="text"
-		style="direction: rtl; padding: 5px; font-size: 18px; width: 80vw;"
-		onkeydown="thaanaKeyboard.l2t(event)">
-	<script src="../dist/thaana-keyboard.min.js"></script>
+		class="thaana-keyboard"
+		style="direction: rtl; padding: 5px; font-size: 18px; width: 80vw;">
+	<script src="thaana-keyboard.min.js"></script>
 </body>
 </html>
