--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <script>
         window.addEventListener('DOMContentLoaded' , (e) => {
-            const tk = new window.ThaanaKeyboard(
+            const tk = new ThaanaKeyboard(
                 '.thaana-keyboard',
                 false
             )
